--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@better-auth/passkey": "^1.4.10",
     "@captchafox/react": "^1.10.0",
     "@daveyplate/better-auth-ui": "^3.3.1",
     "@hookform/resolvers": "^5.2.2",
@@ -23,7 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
-    "better-auth": "^1.4.7",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
@@ -31,6 +32,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
