--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "tsx server.ts",
         "server": "nodemon --exec tsx server.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "postinstall": "npx prisma generate"
     },
     "keywords": [],
     "author": "",
@@ -29,7 +30,7 @@
         "@types/node": "^25.0.2",
         "@types/pg": "^8.16.0",
         "nodemon": "^3.1.11",
-        "prisma": "^5.22.0",
+        "prisma": "^7.1.0",
         "ts-node": "^10.9.2",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3"
