fix: update vercel.json for Prisma compatibility

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
+  "env": {
+    "DATABASE_URL": "@database_url"
+  },
   "builds": [
     {
       "src": "server.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["prisma/**"]
+      }
     }
   ],
   "routes": [
